--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MetaCoin - Default Truffle App</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link href="./app.css" rel='stylesheet' type='text/css'>
-  <script src="./app.js"></script>
-</head>
-<body>
-  <h1>MetaCoin</h1>
-  <h2>Example Truffle Dapp</h2>
-  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
-
-  <br>
-  <h1>Send</h1>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
-  <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="send" onclick="sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
-  <br><br>
-  <br><br>
-</body>
-
-<head>
   <title>Send to two Accounts</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href="./app.css" rel='stylesheet' type='text/css'>
@@ -31,13 +9,16 @@
 <body>
   <h1>Send to two Accounts</h1>
   <h2>Project Week 3 Dapp</h2>
-  <h3>You have <span class="black"><span id="balance1"></span> META</span> in account <span id="receiver1"> </span> </h3>
-  <h3>You have <span class="black"><span id="balance2"></span> META</span> in account <span id="receiver2"> </span> </h3>
+  <h3>Contract has received <span class="black"><span id="balance"></span> Wei</span> in total so far.</h3>
+  <br>
+  <h3>You have <span class="black"><span id="balance0"></span> Ether</span> in account <span id="receiver0"> </span> </h3>
+  <h3>You have <span class="black"><span id="balance1"></span> Ether</span> in account <span id="receiver1"> </span> </h3>
+  <h3>You have <span class="black"><span id="balance2"></span> Ether</span> in account <span id="receiver2"> </span> </h3>
 
   <br>
   <h1>Send</h1>
   <br><label for="amountToSplit">Amount :</label><input type="text" id="amountToSplit" placeholder="e.g., 95"></input>
-  <br><br><button id="send" onclick="sendCoinToSplit()">Send Metacoin To Split 50/50</button>
+  <br><br><button id="send" onclick="sendCoinToSplit()">Send Wei To Split 50/50</button>
   <br><br>
   <span id="status"></span>
 </body>
