--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
   <br><label for="amountToSplit">Amount :</label><input type="text" id="amountToSplit" placeholder="e.g., 95"></input>
   <br><br><button id="send" onclick="sendCoinToSplit()">Send Wei To Split 50/50</button>
   <button id="send" onclick="fullWithdraw()">Send back ether</button>
+  <button id="send" onclick="splitInOneTransaction()">Split Wei (One transaaction)</button>
   <br><br>
   <span id="status"></span>
 </body>
